<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:deviceIds="wear">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="bold"
            android:textSize="@dimen/nombre_contacto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="llamar"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgvTelefono"
            android:layout_width="@dimen/tamañoIcono"
            android:layout_height="@dimen/tamañoIcono"
            android:src="@mipmap/icono_huella"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="@dimen/telefono_contacto"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/marginLeft"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="enviarMail"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgvEmail"
            android:layout_width="@dimen/tamañoIcono"
            android:layout_height="@dimen/tamañoIcono"
            android:src="@mipmap/icono_huella"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/email_contacto"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/marginLeft"/>
    </LinearLayout>




</LinearLayout>